--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:production": "env-cmd -f .env react-scripts start",
+    "start:staging": "env-cmd -f .env react-scripts start",
     "build": "react-scripts build",
+    "build:production": "env-cmd -f .env react-scripts build",
+    "build:staging": "env-cmd -f .env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
